--- a/docs/Java/目录.md
+++ b/docs/Java/目录.md
@@ -1,4 +1,9 @@
 * [nio](/Java/java%20nio.md)
 * [并发](/Java/JAVA并发/锁.md)
 * [JDK特性](/Java/jdk特性.md)
-* [JVM](/Java/jvm.md)
+* JVM
+  * [Java内存模型](/Java/JVM/Java内存模型.md)
+  * [Java内存区域](/Java/JVM/Java内存区域.md)
+  * [垃圾收集](/Java/JVM/垃圾收集.md)
+  * [逃逸分析](/Java/JVM/逃逸分析.md)
+  * [性能监控，故障处理工具](/Java/JVM/性能监控，故障处理工具.md)
