--- a/docs/Java/JAVA并发/锁.md
+++ b/docs/Java/JAVA并发/锁.md
@@ -28,6 +28,7 @@
 与互斥锁类似，任何时刻最多只能有一个执行单元获得锁，但两者在调度机制上有所不同
 * 对于互斥锁，如果资源已经被占用，资源申请者只能进入睡眠状态。
 * 对于自旋锁，如果自旋锁已经被别的执行单元保持，调用者就一直循环在那里看是否该自旋锁的保持者已经释放了锁
+>自旋次数的默认值是十次，用户也可以使用参数-XX：PreBlockSpin来自行更改。
 
 6. 偏向锁/轻量级锁/重量级锁（synchronized）
    
