--- a/docs/Java/目录.md
+++ b/docs/Java/目录.md
@@ -6,4 +6,5 @@
   * [Java内存区域](/Java/JVM/Java内存区域.md)
   * [垃圾收集](/Java/JVM/垃圾收集.md)
   * [逃逸分析](/Java/JVM/逃逸分析.md)
+  * [类加载机制](/Java/JVM/类加载机制.md)
   * [性能监控，故障处理工具](/Java/JVM/性能监控，故障处理工具.md)
