--- a/docs/Java/目录.md
+++ b/docs/Java/目录.md
@@ -8,3 +8,6 @@
   * [逃逸分析](/Java/JVM/逃逸分析.md)
   * [类加载机制](/Java/JVM/类加载机制.md)
   * [性能监控，故障处理工具](/Java/JVM/性能监控，故障处理工具.md)
+
+* 多线程
+  * [锁机制](/Java/JAVA并发/锁.md)
