--- a/docs/LeetCode/常用模板.md
+++ b/docs/LeetCode/常用模板.md
@@ -1,3 +1,8 @@
+## 树的遍历
+
+[二叉树的中序遍历](/LeetCode/Hot100/树/94.%20二叉树的中序遍历.md)
+
+
 ## 二分
 
 * 当` check(mid) == true `调整的是` l `时：计算 mid 的方式应该为 `mid = l + r + 1 >> 1`：
@@ -34,6 +39,47 @@
 
 考虑 l = 0, r = 1 的简单情况，如果不 +1 的话，l + r >> 1 等于 0 + 1 / 2，l 仍然是 0，陷入死循环。
 
+## 数论
+
+### 最大公因数
+
+```java
+    public int gcd(int a,int b){
+        return b==0?a:gcd(b,a%b);
+    }
+```
+
+### 快速幂
+
+```java
+public int mi(int a,int b){
+    int ans=1;
+    while(b>0){
+        if(b&1==1){
+            ans*=a;
+        }
+        b>>=1;
+        a=a*a;
+    }
+}
+```
+### 素数筛法
+
+```java
+//埃氏筛法的基本思想 ：从2开始，将每个质数的倍数都标记成合数，以达到筛选素数的目的。
+public int[] prime(int num){
+    int []visit=new int[num+1];//用数组标记是否合数，0代表为素数
+    visit[0]=visit[1]=1;
+    for(int i=2;i<=num;i++){
+        if(!visit[i]){  //如果i是素数，让i的所有倍数都不是素数
+            for(int j=i*i;j<=max;j+=i){//j 从 i * i 而不是从 i + i开始，因为 i*(2~ i-1)在 2~i-1时都已经被筛去，所以从i * i开始
+                visit[j]=1;
+            }
+        }
+    }
+    return visit;
+}
+```
 
 ## 滑动窗口
 ```java
@@ -68,6 +114,25 @@
 ```
 ## 输入输出
 ```java
+//常规输入输出
+
+public class Main{
+    public static void main(String[] args) {
+        Scanner sc=new Scanner(System.in);
+        sc.next();//读取到有效字符后才结束输入,不读取空格
+        sc.nextLine();//以Enter为结束符,也就是说 nextLine()方法返回的是输入回车之前的所有字符。
+        sc.nextInt();//读取整数
+        sc.nextFloat();//读取小数
+        sc.hasNextXX();//判断是否有输入
+
+        sc.close;
+    }
+}
+```
+
+```java
+//当输入输出的数据量大于一百万左右就必须使用快速IO,这种方式只能读取数字和字母字符串， 不能读取空格和其他字符。
+//快速输入输出
 import java.io.*;
 
 public class Main {
