--- a/docs/LeetCode/常用模板.md
+++ b/docs/LeetCode/常用模板.md
@@ -83,7 +83,30 @@ public int[] prime(int num){
 
 ## 滑动窗口
 ```java
+    public T slidingWindow(...){
+        """
+        step1:根据题意维护变量
+        1.和 Sum
+        2.最大长度 max_len，最小长度 min_len
+        3.不重复 hashmap = {}
 
+        step2: 窗口的开始位置start和结束位置end
+
+        step3: 根据条件写判断语句，维护step1中的变量
+
+        step4: 根据题目要求，从中选择一种方法套用
+
+            选择一：窗口长度固定
+                if 窗口长度达到限定的长度：
+                    1.更新step1中的相关变量
+                    2.窗口左边位置start向前移动 1，保证end向右移动时窗口长度保持不变
+            选择二：窗口长度不固定
+                while 窗口条件不符合：
+                    1.更新step1中的相关变量
+                    2.不断移动start，直到窗口条件符合
+        step5:返回答案
+        """
+    }
 ```
 
 ## 并查集
