--- a/docs/LeetCode/常用模板.md
+++ b/docs/LeetCode/常用模板.md
@@ -154,6 +154,20 @@ public class Main{
 ```
 
 ```java
+public class Main{
+    public static void main(String[] args) { 
+        BufferedReader br = new BufferedReader(new InputStreamReader(System.in);
+        String line;
+        String[] params;
+        line=br.readLine();//读取一行
+        params = line.trim().split(" ");//将该行去除首位空格后转为字符串数组，按空格拆分
+        int xx=Integer.parseInt(params[num]);//进行转型
+    }
+}
+```
+
+
+```java
 //当输入输出的数据量大于一百万左右就必须使用快速IO,这种方式只能读取数字和字母字符串， 不能读取空格和其他字符。
 //快速输入输出
 import java.io.*;
