--- a/docs/LeetCode/经典/440. 字典序的第K小数字.md
+++ b/docs/LeetCode/经典/440. 字典序的第K小数字.md
@@ -29,11 +29,11 @@ class Solution {
         int prefix=1;
         while(p<k){
             long count=getcount(prefix,n);
-            if(p+count<=k){
+            if(p+count<=k){//如果当前前缀包括的节点数量比k小，需要右移节点
                 prefix++;
                 p+=count;
             }
-            else{
+            else{//否则查找子树
                 prefix*=10;
                 p++;
             }
@@ -42,10 +42,10 @@ class Solution {
     }
     public long getcount(int prefix,int n){
         long cur=prefix;
-        long next=cur+1;
+        long next=cur+1;//位于右边十叉树的节点
         long count=0;
         while(cur<=n){
-            count+=Math.min(n+1,next)-cur;
+            count+=Math.min(n+1,next)-cur;//该前缀在当前层的节点数量，
             cur*=10;
             next*=10;
         }
