--- a/docs/LeetCode/Hot100/dp/记忆化搜索/87.扰乱字符串.md
+++ b/docs/LeetCode/Hot100/dp/记忆化搜索/87.扰乱字符串.md
@@ -20,9 +20,10 @@
 
 #### 动态规划
 dp[i][j][len]:表示`s1`从`i`开始,`s2`从`j`开始，长度`len`的字符能否形成【扰乱字符串】,状态转移方程如下：
-```
-dp[i][j][len]=dp[i][j][k]&&dp[i+k][j+k][len-k] ||
-dp[i][j][len]=dp[i][j+len-k][k]&&dp[i+k][j][len-k]
+```java
+dp[i][j][len]=dp[i][j][k]&&dp[i+k][j+k][len-k]//未交换s1字符串的情况
+
+dp[i][j][len]=dp[i][j+len-k][k]&&dp[i+k][j][len-k]//交换s1字符串的情况
 ```    
 
 ### 题解
