--- a/docs/数据结构/跳表.md
+++ b/docs/数据结构/跳表.md
@@ -7,7 +7,7 @@
 ![](https://p3-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/20567add8d8342ea9fbbfc2e921a7a8b~tplv-k3u1fbpfcp-watermark.awebp)
 
 
-
+>为什么Redis用跳表不用红黑树？对于区间查找来说，跳表可以做到 O(logn) 的时间复杂度定位区间的起点，然后在原始链表中顺序往后遍历就可以了
 在查询某个节点时，从最上层第一个节点开始向右查询，若下一个节点值大于目标值或为尾节点，则向下一层寻找。
 ## 特点
 * 一个跳跃表应该有若干个层（Level）链表组成；
