--- a/docs/数据结构/红黑树.md
+++ b/docs/数据结构/红黑树.md
@@ -1,4 +1,5 @@
 # 红黑树
+![](https://community-header-1306990603.cos.ap-guangzhou.myqcloud.com/20220304153503.png)
 ## 概念
 红黑树，一种二叉查找树，但在每个结点上增加一个存储位表示结点的颜色，可以是Red或Black。
 
@@ -19,3 +20,14 @@
 5. 对于任意结点而言，其到叶结点树尾端NIL指针的每条路径都包含相同数目的黑结点。 
 
 正是红黑树的这5条性质，使一棵n个结点的红黑树始终保持了logn的高度，从而也就解释了“红黑树的查找、插入、删除的时间复杂度最坏为O(log n)”这一结论成立的原因。
+
+## 红黑树的旋转
+
+红黑树的插入和删除会破坏红黑树的平衡，所以需要通过**左旋**和**右旋**保持平衡。
+
+### 插入
+
+**红黑树规定，插入的节点必须是红色的。而且，二叉查找树中新插入的节点都是放在叶子节点上。**
+
+### 删除
+
