--- a/docs/LeetCode/Hot100/回溯/301. 删除无效的括号.md
+++ b/docs/LeetCode/Hot100/回溯/301. 删除无效的括号.md
@@ -12,10 +12,10 @@
 2. 遍历时维护当前序列 **左括号数量(leftcount)** 和 **右括号数量(rightcount)** 
 3. 遍历字符串存在三种可能性
     * 当前字符为`"("`
-      1. 如果当前有多余的左括号，我们可以选择不加入该字符，并将多余左括号数量-1;
+      1. 如果当前有多余的左括号，我们可以选择不加入该字符，并将多余左括号数量`lefthao-1`;
       2. 不管当前有没有多余的左括号，都可以加入该字符,并将`leftcount+1`
     * 当前字符为`")"`
-      1. 如果当前有多余的右括号，我们可以选择不加入该字符，并将多余右括号数量-1;
+      1. 如果当前有多余的右括号，我们可以选择不加入该字符，并将多余右括号数量`righthao-1`;
       2. 不管当前有没有多余的右括号，如果当前`leftcount>rightcount`,都可以加入该字符,并将`rightcount+1`
     * 当前字符为`其他字符`，跳过
 ### 题解
