--- a/docs/LeetCode/Hot100/目录.md
+++ b/docs/LeetCode/Hot100/目录.md
@@ -45,7 +45,7 @@
 * [93 复原IP地址](/LeetCode/Hot100/回溯/93%20复原IP地址.md)
 * [131. 分割回文串 ](/LeetCode/Hot100/回溯/131.%20分割回文串%20.md)
 * [140. 单词拆分 II ](/LeetCode/Hot100/回溯/140.%20单词拆分%20II%20.md)
-* [301. 删除无效的括号](/LeetCode/Hot100/回溯/301.%20删除无效的括号.md)
+* [301. 删除无效的括号⭐](/LeetCode/Hot100/回溯/301.%20删除无效的括号.md)
 * [437. 路径总和 III ](/LeetCode/Hot100/回溯/437.%20路径总和%20III%20.md)
 
 ## 双指针
