--- a/docs/Java/JVM/垃圾收集.md
+++ b/docs/Java/JVM/垃圾收集.md
@@ -263,8 +263,7 @@ Roots能直接关联到的对象，速度很快)
 
 **缺点**：
 1. **CMS收集器对处理器资源非常敏感**，会因为占用了一部分线程（或者说处理器的计
-算能力）而导致应用程序变慢，降低总吞吐量。CMS默认启动的回收线程数是（处理器核心数量
-+3）/4，也就是说，如果处理器核心数在四个或以上，并发回收时垃圾收集线程只占用不超过25%的
+算能力）而导致应用程序变慢，降低总吞吐量。CMS默认启动的回收线程数是（处理器核心数量+3）/4，也就是说，如果处理器核心数在四个或以上，并发回收时垃圾收集线程只占用不超过25%的
 处理器运算资源，并且会随着处理器核心数量的增加而下降。但是当处理器核心数量不足四个时，
 CMS对用户程序的影响就可能变得很大。
 2. **无法处理“浮动垃圾”（Floating Garbage）**，导致一次完全“Stop The World”的Full GC的产生
