--- a/docs/项目碎碎念/社区/社区.md
+++ b/docs/项目碎碎念/社区/社区.md
@@ -48,11 +48,11 @@ username   email
 
 **索引**:
 
-from_id
+from_id to_id
 
 ## Redis 在项目中的主要作用
 
-### 缓存
+### 缓存(待完善)
 
 本项目采用 Caffine+Redis 构建二级缓存，初始缓存的内容为帖子和热帖前十页的内容。
 
@@ -104,7 +104,7 @@ from_id
 
 Union 取并集，获取 size
 
-## Kafka 的应用
+## Kafka 的应用(待完善)
 
 1. 评论，点赞和关注会触发通知事件，对内容进行封装插入数据库。
 
