--- a/docs/LeetCode/Hot100/dp/区间DP/5. 最长回文子串 .md
+++ b/docs/LeetCode/Hot100/dp/区间DP/5. 最长回文子串 .md
@@ -15,7 +15,7 @@
 
 当s[j]==s[k]时，其正确性由dp[j+1][k-1]决定，注意若`k-j<=2`表示子串长度为2，则必定为回文串
 
-当s[j]==s[k]，必定不是回文串
+当s[j]!=s[k]，必定不是回文串
 
 对于每一个成立的回文串，倘若其长度大于当前维护的回文串最大值，则进行更新，并记录其左边界值
 
@@ -35,7 +35,7 @@ class Solution {
             int max=1,begin=0;
             for(int i=2;i<=n;i++){
                 for(int j=0;j<n;j++){
-                    int k=j+i-1;
+                    int k=j+i-1;//代表以j为起点的字符串终点
                     if(k>=n)
                         break;
 
@@ -47,6 +47,7 @@ class Solution {
                     }
                     else
                         dp[j][k]=false;
+                    
                     if(dp[j][k]&&k-j+1>max){
                         max=k-j+1;
                         begin=j;
