--- a/docs/项目碎碎念/社区/社区.md
+++ b/docs/项目碎碎念/社区/社区.md
@@ -14,7 +14,7 @@
 
 **索引**:
 
-user_id
+user_id 用户查询自己发过的帖子时进行索引查询
 
 ### comment
 
@@ -22,12 +22,13 @@ user_id
 
 |  id  | user_id |           entity_type            | entity_id |   target_id   | content  | status | create_time |
 | :--: | :-----: | :------------------------------: | :-------: | :-----------: | :------: | :----: | :---------: |
-| 主键 | 用户 id | 实体类型(评论的是主题帖还是评论) |  实体 id  | 评论的目标 id | 评论内容 |  状态  |  创建时间   |
+| 主键 | 用户 id | 实体类型(评论的是主题帖还是评论) |  隶属的主题帖 id,如果为评论的回复,则为评论id  | 若评论的是评论,则为该评论用户的id,否则为0 | 评论内容 |  状态  |  创建时间   |
 
 **索引**:
 
-user_id  entity_id
+user_id  :用户查询自己发过的回复时进行索引查询
 
+entity_id :根据主题贴查询其评论时进行索引查询
 ### user
 
 代表用户,字段对应信息如下
@@ -48,13 +49,18 @@ username   email
 
 **索引**:
 
-from_id to_id
+from_id to_id  :根据to_id进行属于该用户的索引查询
 
 ## Redis 在项目中的主要作用
 
-### 缓存(待完善)
+### 缓存
 
-本项目采用 Caffine+Redis 构建二级缓存，初始缓存的内容为帖子和热帖前十页的内容。
+本项目采用 Caffine+Redis 构建二级缓存，初始缓存的内容为帖子和热帖前十页的内容。当本地缓存查不到内容时,到Redis中查询,若Redis没有再查数据库.
+
+Redis采用旁路缓存的模式进行缓存读写.
+
+
+
 
 ### 点赞与关注
 
@@ -119,3 +125,4 @@ Union 取并集，获取 size
 ## 发帖与回帖
 
 帖子类型分为主题帖和评论两类. 根据主题帖,查询其对应的评论和点赞等信息,对于评论可能还有评论,同样进行判断.
+
