--- a/docs/LeetCode/Hot100/差分/1109. 航班预订统计.md
+++ b/docs/LeetCode/Hot100/差分/1109. 航班预订统计.md
@@ -19,9 +19,28 @@
 
 
 ### 思路
-利用差分思想
+利用差分思想，对于[l,r]区间内的加减操作,将`v[l]+val`,`v[r+1]-val`.
+
+最后通过计算前缀和得出整个区间的变化后的值.
+
 ### 题解
 ```java
-
+class Solution {
+    public int[] corpFlightBookings(int[][] bookings, int n) {
+            int []map=new int[n+1];
+            int []ans=new int[n];
+            for(int []book:bookings){
+                int l=book[0]-1;
+                int r=book[1]-1;
+                map[l]+=book[2];
+                map[r+1]-=book[2];
+            }
+            ans[0]=map[0];
+            for(int i=1;i<n;i++){
+                ans[i]=ans[i-1]+map[i];
+            }
+            return ans;
+    }
+}
 ```
 ## 参考链接
