--- a/docs/LeetCode/Hot100/目录.md
+++ b/docs/LeetCode/Hot100/目录.md
@@ -76,6 +76,13 @@
 * [437. 路径总和 III  ](/LeetCode/Hot100/前缀和/437.%20路径总和%20III%20.md)
 * [560. 和为 K 的子数组  ](/LeetCode/Hot100/前缀和/560.%20和为%20K%20的子数组%20.md)
 
+## 差分
+
+>对于差分，其操作可以看作是前缀和的反向操作，也就是当前项与前一项的差。当对区间进行加减时，可以在差分后的数组后对加减操作的区间头尾直接加减，最后可反推出原数组。
+
+>常用于数组区间修改后进行单点查询。
+
+* [1109. 航班预订统计](/LeetCode/Hot100/差分/1109.%20航班预订统计.md)
 ## DP
 ### 区间 DP
 
