--- a/docs/设计模式/代理模式.md
+++ b/docs/设计模式/代理模式.md
@@ -67,6 +67,51 @@ public class RpcClientProxy implements InvocationHandler {
     }
 }
 ```
+
+```java
+         interface DemoInterface {
+            String hello(String msg);
+         }
+
+         class DemoImpl implements DemoInterface {
+            @Override
+            public String hello(String msg) {
+               System.out.println("msg = " + msg);
+               return "hello";
+            }
+         }
+
+         class DemoProxy implements InvocationHandler {
+
+            private DemoInterface service;
+
+            public DemoProxy(DemoInterface service) {
+               this.service = service;
+            }
+
+            @Override
+            /*
+               proxy：代理对象
+               method：对应于在代理对象上调用的接口方法的Method实例
+               args：代理对象调用接口方法时传递的实际参数
+            */
+            public Object invoke(Object obj, Method method, Object[] args) throws Throwable {
+               System.out.println("调用方法前...");
+               Object returnValue = method.invoke(service, args);
+               System.out.println("调用方法后...");
+               return returnValue;
+            }
+
+         }
+
+         public class Solution {
+            public static void main(String[] args) {
+               DemoProxy proxy = new DemoProxy(new DemoImpl());
+               DemoInterface service = Proxy.newInstance(DemoInterface.class.getClassLoader(),new Class<?>[]{DemoInterface.class},proxy);
+               System.out.println(service.hello("呀哈喽！"));
+            }
+         }
+```
 ### CGLib代理
 
 CGLib**底层采用ASM字节码生成框架，使用字节码技术生成代理类**，在JDK1.6之前比使用Java反射效率要高。唯一需要注意的是，**CGLib不能对声明为final的类或者方法进行代理，因为CGLib原理是动态生成被代理类的子类。**
