--- a/docs/Java/目录.md
+++ b/docs/Java/目录.md
@@ -4,6 +4,7 @@
 * JVM
   * [Java内存模型](/Java/JVM/Java内存模型.md)
   * [Java内存区域](/Java/JVM/Java内存区域.md)
+  * [常量池](/Java/JVM/常量池.md)
   * [垃圾收集](/Java/JVM/垃圾收集.md)
   * [逃逸分析](/Java/JVM/逃逸分析.md)
   * [类加载机制](/Java/JVM/类加载机制.md)
