--- a/docs/LeetCode/剑指offer/dp/60. n个骰子的点数 .md
+++ b/docs/LeetCode/剑指offer/dp/60. n个骰子的点数 .md
@@ -11,9 +11,38 @@
 输出: [0.16667,0.16667,0.16667,0.16667,0.16667,0.16667]
 ```
 ### 思路
- 
+
+对于每个值出现的概率，取决于骰子相加的点数，而每个骰子出现某个值的概率都是相同的，所以从前往后枚举n个骰子可能出现的所有值，其概率可由n-1个骰子出现的结果转移而来。
 ### 题解
 ```java
+class Solution {
+    public double[] dicesProbability(int n) {
 
+        double [][]dp=new double[n+1][n*6+1];//代表第n轮某点数的概率
+
+        for(int i=1;i<=6;i++){
+            dp[1][i]=1.0/6;
+        }
+
+        for(int i=2;i<=n;i++){//模拟每一轮
+            for(int j=i;j<=i*6;j++){//代表本轮骰子相加可能出现的所有点数
+                for(int k=1;k<=6;k++){//每个骰子可能投掷出的点数
+                    if(j-k>0){
+                        dp[i][j]+=dp[i-1][j-k]/6;
+                    }
+                    else
+                        break;
+                }
+            }
+        }
+
+        double []ans=new double[n*5+1];
+        for(int i=0;i<=5*n;i++){
+            ans[i]=dp[n][n+i];
+        }
+        return ans;
+
+    }
+}
 ```
 ## 参考链接
