--- a/docs/Java/JVM/垃圾收集.md
+++ b/docs/Java/JVM/垃圾收集.md
@@ -358,3 +358,35 @@ HandlePromotionFailure设置不允许冒险，那这时就要改为进行一次F
 前是无法明确知道的，所以只能取之前每一次回收晋升到老年代对象容量的平均大小作为经验值，与
 老年代的剩余空间进行比较，决定是否进行Full GC来让老年代腾出更多空间。
 
+## GC调优
+
+### 降低Minor GC 频率
+
+通常情况下，由于新生代空间较小，Eden 区很快被填满，就会导致频繁 Minor GC，因此我们可以通过增大新生代空间来降低 Minor GC 的频率。
+
+单次 Minor GC 时间是由两部分组成：**T1（扫描新生代）和 T2（复制存活对象）**。假设一个对象在 Eden 区的存活时间为 500ms，Minor GC 的时间间隔是 300ms，那么正常情况下，Minor GC 的时间为 ：T1+T2。
+
+当我们增大新生代空间，Minor GC 的时间间隔可能会扩大到 600ms，此时一个存活500ms 的对象就会在 Eden 区中被回收掉，此时就不存在复制存活对象了，所以再发生Minor GC 的时间为：两次扫描新生代，即 2T1。可见，扩容后，Minor GC 时增加了 T1，但省去了 T2 的时间。**通常在虚拟机中，复制对象的成本要远高于扫描成本。**
+
+如果在堆内存中存在较多的长期存活的对象，此时增加年轻代空间，反而会增加 Minor GC的时间。如果堆中的短期对象很多，那么扩容新生代，单次 Minor GC 时间不会显著增加。因此，单次 Minor GC 时间更多取决于 GC 后存活对象的数量，而非 Eden 区的大小。
+
+### 降低Full GC的频率
+
+>由于堆内存空间不足或老年代对象太多，会触发 Full GC，频繁的 Full GC 会带来上下文切换，增加系统的性能开销。
+
+1. **减少创建大对象**
+
+例如，一次性查询出 几十 个字段的业务操作，这种大对象如果超过年轻代最大对象阈值，会被直接创建在老年代；即使被创建在了年轻代，由于年轻代的内存空间有限，通过 Minor GC 之后也会进入到老年代。这种大对象很容易产生较多的 Full GC。
+
+1. **增大堆内存空间**
+
+在堆内存不足的情况下，增大堆内存空间，且设置初始化堆内存为最大堆
+内存，也可以降低 Full GC 的频率。
+
+### 选择合适的GC回收器
+
+假设我们有这样一个需求，要求每次操作的响应时间必须在 500ms 以内。这个时候我们一
+般会选择响应速度较快的 GC 回收器，CMS（Concurrent Mark Sweep）回收器和 G1 回
+收器都是不错的选择。
+而当我们的需求对系统吞吐量有要求时，就可以选择 Parallel Scavenge 回收器来提高系统
+的吞吐量。
