--- a/docs/项目碎碎念/社区/社区.md
+++ b/docs/项目碎碎念/社区/社区.md
@@ -59,7 +59,9 @@ from_id to_id  :根据to_id进行属于该用户的索引查询
 
 Redis采用旁路缓存的模式进行缓存读写.
 
-
+**单独缓存的局限性**：
+* 如果只使用redis来做缓存我们会有大量的请求到redis，但是每次请求的数据都是一样的，假如这一部分数据就放在应用服务器本地，那么就省去了请求redis的网络开销，请求速度就会快很多。但是使用redis横向扩展很方便。
+* 如果只使用Caffeine来做本地缓存，我们的应用服务器的内存是有限，并且单独为了缓存去扩展应用服务器是非常不划算。所以，只使用本地缓存也是有很大局限性的。
 
 
 ### 点赞与关注
