--- a/docs/LeetCode/常用模板.md
+++ b/docs/LeetCode/常用模板.md
@@ -109,8 +109,8 @@ public int[] prime(int num){
         """
     }
 ```
-
-## 并查集
+## 图论
+###  并查集
 并查集 (Disjoint-set data structure / union–find data structure / merge–find set) 是一种树形的数据结构，顾名思义，它用于处理一些不交集的合并及查询问题。 它支持两种操作：
 
 查找 ( Find ) ：确定某个元素处于哪个子集；
@@ -136,6 +136,10 @@ public int[] prime(int num){
     }
 
 ```
+
+### 最短路
+
+[网络延迟时间](/LeetCode/经典/743.%20网络延迟时间%20.md)
 ## 输入输出
 ```java
 //常规输入输出
