--- a/docs/LeetCode/常用模板.md
+++ b/docs/LeetCode/常用模板.md
@@ -110,6 +110,42 @@ public int[] prime(int num){
     }
 ```
 ## 图论
+
+### 建图
+
+#### 邻接矩阵
+
+>适用于边数较多的稠密图使用，当边数量接近点的数量的平方，即 $m \approx n^2$时，可定义为稠密图
+```java
+// 邻接矩阵数组：w[a][b] = c 代表从 a 到 b 有权重为 c 的边
+int[][] w = new int[N][N];
+
+// 加边操作
+void add(int a, int b, int c) {
+    w[a][b] = c;
+}
+```
+#### 邻接表
+
+>与数组存储单链表的实现一致（头插法）。适用于边数较少的稀疏图使用，当边数量接近点的数量，即 $m \approx n$ 时，可定义为稀疏图。
+
+```java
+int[] he = new int[N], e = new int[M], ne = new int[M], w = new int[M];
+int idx;//边的编号
+
+void add(int a, int b, int c) {
+    e[idx] = b;//边指向的点
+    ne[idx] = he[a];//该数组用于找到下一条边
+    he[a] = idx;//点a指向的边的集合的头节点
+    w[idx] = c;//边的权重
+    idx++;
+}
+
+//添加
+for(int i=he[a];i!=-1;i=ne[i]){
+    int b = e[i], c = w[i]; // 存在由 a 指向 b 的边，权重为 c
+}
+```
 ###  并查集
 并查集 (Disjoint-set data structure / union–find data structure / merge–find set) 是一种树形的数据结构，顾名思义，它用于处理一些不交集的合并及查询问题。 它支持两种操作：
 
@@ -139,6 +175,8 @@ public int[] prime(int num){
 
 ### 最短路
 
+>求单源最短路径常用迪杰斯特拉算法，各点间则用floyd算法
+
 [网络延迟时间](/LeetCode/经典/743.%20网络延迟时间%20.md)
 ## 输入输出
 ```java
@@ -159,6 +197,7 @@ public class Main{
 ```
 
 ```java
+//常用输入输出
 public class Main{
     public static void main(String[] args) { 
         BufferedReader br = new BufferedReader(new InputStreamReader(System.in);
