--- a/docs/Java/JVM/垃圾收集.md
+++ b/docs/Java/JVM/垃圾收集.md
@@ -378,15 +378,11 @@ HandlePromotionFailure设置不允许冒险，那这时就要改为进行一次F
 
 例如，一次性查询出 几十 个字段的业务操作，这种大对象如果超过年轻代最大对象阈值，会被直接创建在老年代；即使被创建在了年轻代，由于年轻代的内存空间有限，通过 Minor GC 之后也会进入到老年代。这种大对象很容易产生较多的 Full GC。
 
-1. **增大堆内存空间**
+2. **增大堆内存空间**
 
 在堆内存不足的情况下，增大堆内存空间，且设置初始化堆内存为最大堆
 内存，也可以降低 Full GC 的频率。
 
 ### 选择合适的GC回收器
 
-假设我们有这样一个需求，要求每次操作的响应时间必须在 500ms 以内。这个时候我们一
-般会选择响应速度较快的 GC 回收器，CMS（Concurrent Mark Sweep）回收器和 G1 回
-收器都是不错的选择。
-而当我们的需求对系统吞吐量有要求时，就可以选择 Parallel Scavenge 回收器来提高系统
-的吞吐量。
+假设我们有这样一个需求，要求每次操作的响应时间必须在 500ms 以内。这个时候我们一般会选择响应速度较快的 GC 回收器，CMS（Concurrent Mark Sweep）回收器和 G1 回收器都是不错的选择。而当我们的需求对系统吞吐量有要求时，就可以选择 Parallel Scavenge 回收器来提高系统的吞吐量。
