--- a/docs/LeetCode/常用模板.md
+++ b/docs/LeetCode/常用模板.md
@@ -136,7 +136,7 @@ int idx;//边的编号
 void add(int a, int b, int c) {
     e[idx] = b;//边指向的点
     ne[idx] = he[a];//该数组用于找到下一条边
-    he[a] = idx;//点a指向的边的集合的头节点
+    he[a] = idx;//点a指向的边的集合的头节点,初始化为-1
     w[idx] = c;//边的权重
     idx++;
 }
