--- a/docs/LeetCode/Hot100/哈希表/41. 缺失的第一个正数.md
+++ b/docs/LeetCode/Hot100/哈希表/41. 缺失的第一个正数.md
@@ -7,7 +7,7 @@
 输出：3
 ```
 ### 思路
-对于数组中的数字，若其小于等于数组长度，则将该数字对应的下标位置修改为负数，再一次遍历时，如果有数字不为负数，说明为缺失的第一个正数
+对于数组中的数字，若其小于等于数组长度，则将该数字对应的下标位置修改为负数，再一次遍历时，如果有数字不为负数，说明为缺失的第一个正数。
 
 由于数组中可能存在负数，将其修改为n+1
 ### 题解
