--- a/docs/LeetCode/常用模板.md
+++ b/docs/LeetCode/常用模板.md
@@ -3,7 +3,51 @@
 
 [二叉树的中序遍历](/LeetCode/Hot100/树/94.%20二叉树的中序遍历.md)
 
+## 树状数组
 
+树状数组涉及的操作有两个，复杂度均为 $O(\log{n})$：
+
+* `void add(int x, int u)`：含义为在 $x$ 的位置增加 $u$（注意位置下标从 $1$ 开始）；
+* `int query(int x)`：含义为查询从 $[1, x]$ 区间的和为多少（配合容斥原理，可实现任意区间查询）。
+
+```java
+// 上来先把三个方法写出来
+{
+    int[] tree;
+    int lowbit(int x) {
+        return x & -x;
+    }
+    // 查询前缀和的方法
+    int query(int x) {
+        int ans = 0;
+        for (int i = x; i > 0; i -= lowbit(i)) ans += tree[i];
+        return ans;
+    }
+    // 在树状数组 x 位置中增加值 u
+    void add(int x, int u) {
+        for (int i = x; i <= n; i += lowbit(i)) tree[i] += u;
+    }
+}
+
+// 初始化「树状数组」，要默认数组是从 1 开始
+{
+    for (int i = 0; i < n; i++) add(i + 1, nums[i]);
+}
+
+// 使用「树状数组」：
+{   
+    void update(int i, int val) {
+        // 原有的值是 nums[i]，要使得修改为 val，需要增加 val - nums[i]
+        add(i + 1, val - nums[i]); 
+        nums[i] = val;
+    }
+    
+    int sumRange(int l, int r) {
+        return query(r + 1) - query(l);
+    }
+}
+
+```
 ## 二分
 
 * 当` check(mid) == true `调整的是` l `时：计算 mid 的方式应该为 `mid = l + r + 1 >> 1`：
