--- a/docs/LeetCode/剑指offer/dp/19.正则表达式匹配.md
+++ b/docs/LeetCode/剑指offer/dp/19.正则表达式匹配.md
@@ -7,18 +7,18 @@
  转移方程如下：  
  * 当 `p[j - 1] = '*'` 时， dp[i][j] 在当以下任一情况为 `true` 时等于 `true` ：
 
-    1. `dp[i][j - 2]`： 即将字符组合 `p[j - 2] *` 看作出现 0 次
+    1. `dp[i][j - 2]`： 即将字符组合 `p[j - 1] ` 看作出现 0 次
     2. `dp[i - 1][j]` 且 `s[i - 1] = p[j - 2]`: 即让字符 `p[j - 2]` 多出现 1 次
-    3. `dp[i - 1][j]` 且 `p[j - 2] = '.'`: 即让字符 `'.'` 多出现 1 次
+    3. `dp[i - 1][j]` 且 `p[j - 2] = '.'`: 同上
 * 当 `p[j - 1] != '*'` 时， dp[i][j] 在当以下任一情况为 `true` 时等于`true` ：
 
-    1. `dp[i - 1][j - 1]` 且 `s[i - 1] = p[j - 1]` : 即让字符 p[j - 1] 多出现一次
-    2. `dp[i - 1][j - 1]` 且 `p[j - 1] = '.' `: 即将字符 . 看作字符 s[i - 1]  
+    1. `dp[i - 1][j - 1]` 且 `s[i - 1] = p[j - 1]` : 即让字符 p[j - 1]与字符 s[ i-1 ]相等
+    2. `dp[i - 1][j - 1]` 且 `p[j - 1] = '.' `: 即将字符` . `看作字符 s[i - 1]  
 
 
 **初始化边界**  
 * `dp[0][0] = true`： 代表两个空字符串能够匹配。
-* `dp[0][j] = dp[0][j - 2]` 且 `p[j - 1] = '*'`： 首行 s 为空字符串，因此当 p 的偶数位为 * 时才能够匹配**即让 p 的奇数位出现 0 次，保持 p 是空字符串**
+* `dp[0][j] = dp[0][j - 2]` 且 `p[j - 1] = '*'`： 首行 s 为空字符串，因此当 p 的偶数位为` *` 时才能够匹配**即让 p 的奇数位出现 0 次，保持 p 是空字符串**
 
 ### 题解
 ```java
