--- a/docs/LeetCode/经典/743. 网络延迟时间 .md
+++ b/docs/LeetCode/经典/743. 网络延迟时间 .md
@@ -66,4 +66,50 @@ class Solution {
     }
 }
 ```
+
+```java
+//floyd算法
+class Solution {
+    int INF=0x3f3f3f3f;//不用MAX_VALUE，防止溢出
+    boolean []vis;
+    int []dist;
+    int [][]ma;
+    public int networkDelayTime(int[][] times, int n, int k) {
+        ma=new int[n+1][n+1];
+        vis=new boolean[n+1];
+        dist=new int[n+1];
+        for(int i=1;i<=n;i++){
+            for(int j=1;j<=n;j++){
+                if(i==j)
+                    ma[i][j]=ma[j][i]=0;
+                else
+                    ma[i][j]=ma[j][i]=INF;
+            }
+        }
+
+        for(int []t:times){
+            int x=t[0],y=t[1],z=t[2];
+            ma[x][y]=z;
+        }
+
+        //disjkla(n,k);
+        floyd(n);
+        int ans=0;
+        for(int i=1;i<=n;i++){
+            //ans=Math.max(ans,dist[i]);
+            ans=Math.max(ans,ma[k][i]);
+        }
+        return ans>=INF/2?-1:ans;
+    }
+
+        public void floyd(int n){
+            for(int p=1;p<=n;p++){
+                for(int i=1;i<=n;i++){
+                    for(int j=1;j<=n;j++){
+                        ma[i][j]=Math.min(ma[i][j],ma[i][p]+ma[p][j]);
+                    }
+                }   
+            }
+    }
+```
 ## 参考链接
