--- a/docs/系统设计/限流.md
+++ b/docs/系统设计/限流.md
@@ -17,6 +17,33 @@
 
 计数器限流只要一定时间内的总请求数超过设定的阀值则进行限流，是一种简单粗暴的总数量限流，而不是平均速率限流。
 
+**伪代码**
+
+```java
+public class CounterDemo {
+    public long timeStamp = getNowTime();
+    public int reqCount = 0;
+    public final int limit = 100; // 时间窗口内最大请求数
+    public final long interval = 1000; // 时间窗口ms
+        public boolean grant() {
+        long now = getNowTime();
+        if (now < timeStamp + interval) {
+            // 在时间窗口内
+            reqCount++;
+            // 判断当前时间窗口内是否超过最大请求控制数
+            return reqCount > limit;
+        }
+        else {
+            timeStamp = now;
+            // 超时后重置
+            reqCount = 1;
+            return true;
+        }
+    }
+    }
+
+```
+
 **优点**
 
    简单粗暴，单机在 Java 中可用 Atomic 等原子类、分布式就 Redis incr。
@@ -45,11 +72,78 @@
 
    无论请求多少，请求的速率有多大，都按照固定的速率流出，对应的就是服务按照固定的速率处理请求。所以无法处理突发请求。
 
+**伪代码**
+
+```java
+public class LeakyDemo {
+    public long timeStamp = getNowTime();
+    public int capacity; // 桶的容量
+    public int rate; // 水漏出的速度
+    public int water; // 当前水量(当前累积请求数)
+        public boolean grant() {
+        long now = getNowTime();
+        water = max(0, water - (now - timeStamp) * rate); // 先执行漏水，计算剩余水量
+        timeStamp = now;
+                if ((water + 1) < capacity) {
+            // 尝试加水,并且水还未满
+            water += 1;
+            return true;
+        }
+        else {
+            // 水满，拒绝加水
+            return false;
+        }
+    }
+    }
+```
 ### 令牌桶算法
 
 类似于漏桶原理，只不过漏桶是定速地流出，而令牌桶是定速地往桶里塞入令牌，然后请求只有拿到了令牌才能通过，之后再被服务器处理。
 
 令牌桶的大小也是有限制的，假设桶里的令牌满了之后，定速生成的令牌会丢弃。
+
+```java
+    /**
+     * 每秒处理数（放入令牌数量）
+     */
+    private long putTokenRate;
+    
+    /**
+     * 最后刷新时间
+     */
+    private long refreshTime;
+
+    /**
+     * 令牌桶容量
+     */
+    private long capacity;
+    
+    /**
+     * 当前桶内令牌数
+     */
+    private long currentToken = 0L;
+
+    /**
+     * 漏桶算法
+     * @return
+     */
+    boolean tokenBucketTryAcquire() {
+
+        long currentTime = System.currentTimeMillis();  //获取系统当前时间
+        long generateToken = (currentTime - refreshTime) / 1000 * putTokenRate; //生成的令牌 =(当前时间-上次刷新时间)* 放入令牌的速率
+        currentToken = Math.min(capacity, generateToken + currentToken); // 当前令牌数量 = 之前的桶内令牌数量+放入的令牌数量
+        refreshTime = currentTime; // 刷新时间
+        
+        //桶里面还有令牌，请求正常处理
+        if (currentToken > 0) {
+            currentToken--; //令牌数量-1
+            return true;
+        }
+        
+        return false;
+    }
+
+```
 
 ## 限流组件
 
