--- a/docs/操作系统/内核与用户态.md
+++ b/docs/操作系统/内核与用户态.md
@@ -1,3 +1,16 @@
+## 虚拟地址空间
+
+操作系统将每个进程的虚拟地址空间划分成两个部分：内核空间和用户空间。内核空间存放的是内核代码和数据，用户空间存放的是用户程序的代码和数据。在 32 位操作系统中，一般将最高的 1G 字节作为内核空间，而将较低的 3G 字节作为用户空间。
+
+进程运行在内核空间时，处于内核态，此时可以执行任何特权指令。每个进程的内核空间都是相同的，用户代码无法访问内核空间。
+
+![](https://community-header-1306990603.cos.ap-guangzhou.myqcloud.com/20220422114753.png)
+
+* **内核虚拟内存**:所有进程共享内核的代码和全局数据结构，独享与进程相关的数据结构，Linux 会将内核虚拟内存的共享区域映射到被所有进程共享的物理页面上
+* 用户栈：从高地址向低地址增长
+* 共享库：动态链接阶段
+* 运行时堆：从低地址向高地址增长
+* 程序代码和数据：从可执行文件中加载（代码段、数据段、BSS 段）
 ## 用户态和内核态
 
 根据进程访问资源的特点，可以把进程在系统上的运行分为两个级别：
