--- a/docs/LeetCode/排序/目录.md
+++ b/docs/LeetCode/排序/目录.md
@@ -17,6 +17,16 @@
 
 ## 使用场景
 
+1. 若 n 较小(如 n≤50)，可采用`直接插入`或`直接选择排序`。
+2. 若文件初始状态基本有序，则应选用`直接插入、冒泡或随机`的快速排序。
+3. 若 n 较大，则应采用时间复杂度为 O(nlogn) 的排序方法：快速排序、堆排序或归并排序。
+    1. 当待排序的关键字是`随机分布`时，快速排序的平均时间最短。   
+    2. 堆排序所需的辅助空间少于快速排序，并且不会出现快速排序可能出现的最坏情况。
+    3. 若要求排序稳定，则可选用归并排序。，归并排序需要较大的额外空间，但归并排序可以多路归并。
+    4. 相比于从长度为 1 的序列开始归并，归并排序也可以和直接插入排序结合使用，先通过直接插入排序获得较长的有序序列，然后再进行归并。这种方式依然是稳定的。
+4. 大部分情况可以直接使用快速排序。
+5. 当待排序的关键字无法全部加载到内存中时，需要使用归并排序进行外部排序。
+
 ## 各个排序算法详细
 
 - [插入排序](/LeetCode/排序/插入排序.md)
@@ -25,3 +35,4 @@
 - [快速排序](/LeetCode/排序/快速排序.md)
 - [堆排序](/LeetCode/排序/堆排序.md)
 - [选择排序](/LeetCode/排序/选择排序.md)
+- [TODO]
