--- a/docs/LeetCode/常用模板.md
+++ b/docs/LeetCode/常用模板.md
@@ -243,8 +243,8 @@ public class Main{
 ```java
 //常用输入输出
 public class Main{
-    public static void main(String[] args) { 
-        BufferedReader br = new BufferedReader(new InputStreamReader(System.in);
+    public static void main(String[] args)  throws IOException{ 
+        BufferedReader br = new BufferedReader(new InputStreamReader(System.in));
         String line;
         String[] params;
         line=br.readLine();//读取一行
