--- a/docs/项目碎碎念/社区.md
+++ b/docs/项目碎碎念/社区.md
@@ -57,7 +57,13 @@ from_id to_id  :根据to_id进行属于该用户的索引查询
 
 本项目采用 Caffine+Redis 构建二级缓存，初始缓存的内容为帖子和热帖前十页的内容。当本地缓存查不到内容时,到Redis中查询,若Redis没有再查数据库.
 
+由于对缓存一致性要求不高,因此像热帖模块只有计算分数后才会去更新缓存.
+
 Redis采用旁路缓存的模式进行缓存读写.
+
+#### 旁路缓存
+
+先更新数据库,再删除缓存
 
 **单独缓存的局限性**：
 * 如果只使用redis来做缓存我们会有大量的请求到redis，但是每次请求的数据都是一样的，假如这一部分数据就放在应用服务器本地，那么就省去了请求redis的网络开销，请求速度就会快很多。但是使用redis横向扩展很方便。
@@ -81,6 +87,12 @@ Redis采用旁路缓存的模式进行缓存读写.
 根据关注用户的 id 构建 key，value 为当前用户的 id 构建关注用户的用户的 key
 
 同样进行事务操作，zset 以当前时间进行排序，即由新到旧。
+
+### 登录相关
+
+#### cookies
+
+将用户的登录凭证存入cookies,在存入redis
 
 ## 注册 登录
 
@@ -112,7 +124,8 @@ Redis采用旁路缓存的模式进行缓存读写.
 
 Union 取并集，获取 size
 
-## Kafka 的应用(待完善)
+## Kafka 的应用
+//TODO:
 
 1. 评论，点赞和关注会触发通知事件，对内容进行封装插入数据库。
 
@@ -128,3 +141,10 @@ Union 取并集，获取 size
 
 帖子类型分为主题帖和评论两类. 根据主题帖,查询其对应的评论和点赞等信息,对于评论可能还有评论,同样进行判断.
 
+## 优化
+
+### 1.频繁发帖
+
+将用户存入redis,设置过期时间.当发帖时检测redis中用户key是否过期
+
+### 2.
