--- a/docs/Java/目录.md
+++ b/docs/Java/目录.md
@@ -1,5 +1,6 @@
 * [nio](/Java/java%20nio.md)
 * [并发](/Java/JAVA并发/锁.md)
+* [线程](/java/JAVA并发/线程.md)
 * [JDK特性](/Java/jdk特性.md)
 * JVM
   * [Java内存模型](/Java/JVM/Java内存模型.md)
