--- a/docs/LeetCode/Hot100/dp/区间DP/312. 戳气球 .md
+++ b/docs/LeetCode/Hot100/dp/区间DP/312. 戳气球 .md
@@ -18,9 +18,9 @@ coins =  3*1*5    +   3*5*8   +  1*3*8  + 1*8*1 = 167
 
 由于每戳一个气球，其他气球对应的左右边界会发生变化难以维护，因此采用倒序的方法。
 
-用dp[i][j]表示开区间(i,j)内所能得到的最大硬币,当`i>=j-1`时,dp[i][j]=0;
+用`dp[i][j]`表示开区间(i,j)内所能得到的最大硬币,当`i>=j-1`时,`dp[i][j]=0;`
 
-反过来从0个气球开始放置，在区间(i,j)内，在某位置`k`放置气球得到的硬币数量为nums[i]*nums[k]*nums[j],同时`k`也成为新边界，即接下来得到的硬币数为dp[i][k]+dp[k][j]。
+反过来从0个气球开始放置，在区间(i,j)内，在某位置`k`放置气球得到的硬币数量为`nums[i]*nums[k]*nums[j]`,同时`k`也成为新边界，即接下来得到的硬币数为`dp[i][k]+dp[k][j]`。
 
 通过枚举k，即可求出dp[i][j]的最大值
 
