--- a/docs/LeetCode/Hot100/dp/状压DP/526. 优美的排列.md
+++ b/docs/LeetCode/Hot100/dp/状压DP/526. 优美的排列.md
@@ -25,7 +25,7 @@ i 能够被 perm[i] 整除
 
 枚举每个state,**对每个state中的为1的数字作为最后一个被选择的数值,确保所有情况可以被统计**.
 
-`state&(¬(1<<(k−1)))`，代表将 state 的二进制表示中的第 k 位 置0 。
+`state&(¬(1<<(k−1)))`，代表将 state 的二进制表示中的第 $k$ 位 `置0` 。
 ### 题解
 ```java
 class Solution {
