--- a/docs/项目碎碎念/实习.md
+++ b/docs/项目碎碎念/实习.md
@@ -1,8 +1,22 @@
+# 自我介绍
+
+面试官您好,我来自广东技术师范大学
 # 实习经历介绍
 
 负责qms质量管理系统的开发与维护,并拉通上下游系统.在职期间重要工作成果如下:
+## 慢查询
 
-## 操作日志
+根据场景对超过5s的语句进行排查
+
+1. 索引设计
+
+查询频繁的字段加上索引
+
+2. SQL语句优化
+    1. 如分类编码,用户习惯从大分类开始输入,于是模糊查询时替换掉左边的'%'
+    2. 根据时间范围定位数据,因为使用month函数导致的隐式转换.
+    3. 取消null值判断,改用默认值判断
+
 
 ## 来料检验
 
@@ -41,7 +55,8 @@
 消费者根据消费信息查库,进行下一步逻辑判断.采取手动ack回应,对于消费失败的数据不再重入队列,登记失败后更新库.
 
 #### 3.补偿机制
-// TODO:
+
+通过xxljob定时任务,查询数据库中    进行再推送
 
 #### 4.rabbitmq配置
 
