--- a/docs/项目碎碎念/社区.md
+++ b/docs/项目碎碎念/社区.md
@@ -29,6 +29,7 @@ user_id 用户查询自己发过的帖子时进行索引查询
 user_id  :用户查询自己发过的回复时进行索引查询
 
 entity_id :根据主题贴查询其评论时进行索引查询
+
 ### user
 
 代表用户,字段对应信息如下
@@ -55,7 +56,7 @@ from_id to_id  :根据to_id进行属于该用户的索引查询
 
 ### 缓存
 
-本项目采用 Caffine+Redis 构建二级缓存，初始缓存的内容为帖子和热帖前十页的内容。当本地缓存查不到内容时,到Redis中查询,若Redis没有再查数据库.
+本项目采用 Caffine构建缓存，初始缓存的内容为帖子和热帖前十页的内容。当本地缓存查不到内容时,再查数据库.
 
 由于对缓存一致性要求不高,因此像热帖模块只有计算分数后才会去更新缓存.
 
