--- a/docs/Java/JAVA并发/线程.md
+++ b/docs/Java/JAVA并发/线程.md
@@ -37,23 +37,23 @@ Java中的线程生命周期
 
 1. **RUNNABLE 与 BLOCKED 的状态转换**
    
-   只有一种场景会触发这种转换，就是线程等待 synchronized 的隐式锁。
+   只有一种场景会触发这种转换，就是线程等待 `synchronized `的隐式锁。
 
 
 2. **RUNNABLE 与 WAITING 的状态转换**
 
-   1. 获得 synchronized 隐式锁的线程，调用无参数的 Object.wait() 方法。
-   2. 调用无参数的 Thread.join() 方法
-   3. 调用 LockSupport.park() 方法
+   1. 获得 synchronized 隐式锁的线程，调用无参数的` Object.wait()` 方法。
+   2. 调用无参数的` Thread.join() `方法
+   3. 调用 `LockSupport.park()` 方法
 
 
 3. **RUNNABLE 与 TIMED_WAITING 的状态转换**
 
-    1. 调用带超时参数的 Thread.sleep(long millis) 方法；
-    2. 获得 synchronized 隐式锁的线程，调用带超时参数的 Object.wait(long timeout) 方法；
-    3. 调用带超时参数的 Thread.join(long millis) 方法；
-    4. 调用带超时参数的 LockSupport.parkNanos(Object blocker, long deadline) 方法；
-    5. 调用带超时参数的 LockSupport.parkUntil(long deadline) 方法。
+    1. 调用带超时参数的` Thread.sleep(long millis) `方法；
+    2. 获得 `synchronized` 隐式锁的线程，调用带超时参数的` Object.wait(long timeout) `方法；
+    3. 调用带超时参数的` Thread.join(long millis) `方法；
+    4. 调用带超时参数的` LockSupport.parkNanos(Object blocker, long deadline) `方法；
+    5. 调用带超时参数的` LockSupport.parkUntil(long deadline) `方法。
 
 
 ## 线程池
