--- a/docs/LeetCode/Hot100/目录.md
+++ b/docs/LeetCode/Hot100/目录.md
@@ -90,6 +90,11 @@
 * [32. 最长有效括号 ](/LeetCode/Hot100/区间DP/32.%20最长有效括号%20.md)
 * [647. 回文子串 ](/LeetCode/Hot100/区间DP/647.%20回文子串%20.md)
 
+### 状压 DP
+
+* [526. 优美的排列 ](/LeetCode/Hot100/dp/状压DP/526.%20优美的排列%20.md) 
+
+
 ### SDASFASFG
 
 * [72. 编辑距离 ](/LeetCode/Hot100/dp/72.%20编辑距离%20.md)
