--- a/docs/设计模式/单例模式.md
+++ b/docs/设计模式/单例模式.md
@@ -30,8 +30,10 @@ public class HungarySingleTon_Safe{
 }
 ```
 
-**缺点：**丢失延迟实例化带来节约资源的好处
+**缺点:** 丢失延迟实例化带来节约资源的好处
+
 ## 懒汉式(双重校验锁，DCL)
+
 只需要实例化一次就可以直接使用，只有sinleton没有被实例化才需要加锁
 ```java
 public class DCLSingleton_Safe{
@@ -69,4 +71,11 @@ public class DCLSingleton_Safe{
 3. 将 singleton 指向分配的内存地址
 
 但是由于 JVM 具有指令重排的特性，执行顺序有可能变成 1>3>2。指令重排在单线程环境下不会出现问题，但是在多线程环境下会导致一个线程获得还没有初始化的实例。例如，线程 T1 执行了 1 和 3，此时 T2 调用 getInstance() 后发现 singleton 不为空，因此返回 singleton ，但此时 singleton 还未被初始化。
+
+
+## 单例模式破坏
+
+1. 反射可以获取类的构造方法,再加一行 setAccessible(true)设置构造方法的可见性，就可以调用私有的构造函数，创建对象进而破坏单例模式了
+2. 克隆破坏单例
+3. 序列化(定义`readResolve`方法解决)
 
